Escape text/urls, fix appearance on non Safari browsers

--- a/war/src/main/scss/abstracts/theme.scss
+++ b/war/src/main/scss/abstracts/theme.scss
@@ -188,6 +188,10 @@ $semantics: (
   --link-text-decoration--active: underline;
   --link-font-weight: 600;
 
+  // Command Palette
+  --command-palette-results-backdrop-filter: contrast(0.7) brightness(1.5) saturate(1.4) blur(20px);
+  --command-palette-inset-shadow: inset 0 0 2px 2px rgba(white, 0.1);
+
   // Tooltips
   --tooltip-backdrop-filter: contrast(0.6) brightness(2.4) saturate(2)
     blur(15px);
